--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,98 @@ body{
 
 
 
-.serach{
-    width: 500px;
-    height: 40px;
-}
+
+  
+  .search-container{
+    width: 590px;
+    display: block;
+   
+    padding-top: 50px;
+    margin-left: 225px;
+  }
+  
+  input#search-bar{
+    margin: 0 auto;
+    width: 100%;
+    height: 46px;
+    padding: 0 20px;
+    font-size: 1rem;
+border: none;
+    outline: none;
+    &:focus{
+     
+      transition: 0.35s ease;
+    
+      &::-webkit-input-placeholder{
+        transition: opacity 0.45s ease; 
+          opacity: 0;
+       }
+      &::-moz-placeholder {
+        transition: opacity 0.45s ease; 
+          opacity: 0;
+       }
+      &:-ms-placeholder {
+       transition: opacity 0.45s ease; 
+         opacity: 0;
+       }    
+     }
+   }
+
+
+   .search-container input{
+    background-color:rgba(220, 220, 220, 0.534) ;
+   }
+  
+  .search-icon{
+    position: relative;
+    float: right;
+    width: 75px;
+    height: 75px;
+    top: -62px;
+    right: -45px;
+    margin-right: 35px;
+  
+  }
+
+  .search-bar-button{
+    display: flex;
+  
+  }
+  
+  .or{
+    margin-top: 52px;
+    font-size: 20px;
+    padding-left: 15px;
+  }
+
+
+  .btn-brand-4{
+    background-color: orangered;
+  color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+   margin-top: 40px;
+    margin-left: 15px;
+
+  }
+
+  .btn-brand-4:hover{
+    background-color: orangered;
+  color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+   margin-top: 40px;
+    margin-left: 15px;
+
+  }
+
+  .upload-your-own{
+    margin-top: 10px;
+  }
+  
+  
+  
