--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@ body{
 
 .section-2{
     background-color: white;
-    height: 100vh;
+    height: 160vh;
     width: 93%;
     margin-left: 3rem;
 }
@@ -203,17 +203,56 @@ border: none;
   }
   
   .audio-container img {
+    width: 290px;
+    height: 290px;
     /* Set the width of the thumbnail image */
-    margin-left: 15px; /* Adjust the spacing between the thumbnail and the audio player */
+    margin-left: 19px; /* Adjust the spacing between the thumbnail and the audio player */
   }
 
 .audio-control audio{
-    width: 300px;
+    width: 290px;
+    height: 30px;
     margin-left: 15px;
-    
-   border-radius: 0;
+  border-radius: 0%;
   
 }
+
+
+.audio-tracks-2{
+    margin-top: 20px;
+    display: flex;
+}
+
+
+.btn-brand-5{
+    background-color: orangered;
+margin-top: 40px;
+    color: white;
+    font-size: 16px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 0px;
+}
+
+.btn-brand-5:hover{
+    margin-top: 40px;
+    background-color: orangered;
+    color: white;
+    font-size: 16px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 0px;
+}
+
+
+.section-3{
+    height: 100vh;
+    width: 100%;
+    background-color:rgba(220, 220, 220, 0.534) ;
+}
+
+
+
   
   
   
