--- a/css/index.css
+++ b/css/index.css
@@ -246,9 +246,47 @@ margin-top: 40px;
 
 
 .section-3{
-    height: 100vh;
-    width: 100%;
-    background-color:rgba(220, 220, 220, 0.534) ;
+ height: 68vh;
+ width: 100%;
+}
+
+.mobile-sec{
+    display: flex;
+}
+
+
+.mobile-image{
+    margin-left: 150px;
+    margin-top: 50px;
+}
+
+.never-stop{
+    font-size: 38px;
+    letter-spacing: 1px;
+}
+
+.hline{
+    width: 70px;
+    height: 3px;
+    background-color:  orangered;
+    
+}
+
+.xbox-one{
+    font-size: 26px;
+}
+
+
+.mobile-image-text{
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+.section-4{
+    background-color: black;
+    height: 70vh;
+    width: 93%;
+    margin-left: 3rem;
 }
 
 
