--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body{
 }
 
 .background-image{
-    background: url('/assets/hero_image.jpg');
+    background: url('../assets/hero_image.jpg');
     height: 73vh;
     width: 93%;
     margin-left: 3rem;
@@ -477,7 +477,7 @@ cursor: pointer;
 @media (max-width: 576px) {
     /* Styles for extra small devices */
     .background-image {
-        background: url('/assets/hero_image.jpg');
+        background: url('../assets/hero_image.jpg');
         height: 70vh;
         width: 100%;
         margin-left: 0;
