--- a/css/for-Artists.css
+++ b/css/for-Artists.css
@@ -285,6 +285,7 @@ padding-left: 10px;
 .image-0{
     margin-top: 65px;
     margin-left: 25px;
+    border-radius: 10%;
 }
 
 
@@ -327,10 +328,23 @@ margin-top: 100px;
 margin-right: 40px;
 }
 
+.image-last{
+    margin-top: 65px;
+    margin-left: 50px;
+}
+
+.get-paid-last{
+    margin-top: 90px;
+}
+
+.get-paid-last h1{
+    font-weight: bold;
+}
+
 
 @media screen and (max-width: 480px){
     .section-4{
-        height: 100vh;
+        height: 110vh;
         width: 120%;
         margin-top: 70rem;
        background-color:black
@@ -339,4 +353,33 @@ margin-right: 40px;
     .image-potebaby img{
         margin-top: 50px;
         }
+}
+
+@media screen and (max-width: 361px){
+    .section-4{
+        height: 110vh;
+        width: 120%;
+        margin-top: 80rem;
+       background-color:black
+    }
+}
+
+@media screen and (max-width: 480px){
+.image-last{
+    margin-left: 35px;
+    margin-top: 50px;
+
+
+}
+.get-paid-last{
+    padding-left: 50px;
+    margin-top: 30px;
+}
+}
+
+.section-6{
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    margin-top: 100px;
 }
