--- a/css/login.css
+++ b/css/login.css
@@ -83,8 +83,8 @@
     text-decoration: underline;
   }
   .field input[type="submit"] {
-    background: #3498db;
-    border: 1px solid #2691d9;
+    background:orangered;
+    border: 1px solid orangered;
     color: white;
     font-size: 18px;
     letter-spacing: 1px;
@@ -93,7 +93,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .field input[type="submit"]:hover {
-    background: #2691d9;
+    background: orangered;
   }
   .login {
     color: white;
